zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/tip@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 120
expression: "tip.map(|tip| Tip::from(tip))"

---
Some(Tip(
  height: 2,
  block_hash: "0002a26c902619fc964443264feb16f1e3e2d71322fc53dcb81cc5d797e273ed",
))
