zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/tip@testnet_0.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 120
expression: "tip.map(|tip| Tip::from(tip))"

---
Some(Tip(
  height: 0,
  block_hash: "05a60a92d99d85997cce3b87616c089f6124d7342af37106edc76126334a2c38",
))
